--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.5.0",
+    "jszip": "^3.10.1",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.0.0",
     "react-toastify": "^11.0.2"
   },
